# kr-AutoAVSR

./: .gitignore  README.md  pyproject.toml  pyproject_poetry1.x.toml
kr_autoavsr/: eval.py  lightning.py  lightning_av.py
kr_autoavsr/configs/: config2.yaml
kr_autoavsr/configs/data/: default.yaml
kr_autoavsr/configs/trainer/: train.yaml
kr_autoavsr/datamodule/: av_dataset.py  data_module.py  samplers.py  transforms.py
kr_autoavsr/espnet/nets/pytorch_backend/: e2e_asr_conformer.py  e2e_asr_conformer_av.py
kr_autoavsr/espnet/nets/pytorch_backend/transformer/: encoder.py
kr_autoavsr/preprocessing/: README.md  align_mouth.py  extract_wav.py  generate_mouth.py  generate_wav.py  mouth_generate.py  raw_data_processing.py  token_generate.py
kr_autoavsr/spm/unigram/: unigram5000.model  unigram5000.vocab
kr_autoavsr/spm/unigram/bpe_1207/: unigram5000_units.txt
