[project]
name = "kr-autoavsr"
version = "0.1.0"
description = ""
authors = [
    {name = "Moon-Dongkyu",email = "dongkyu_moon@daekyo.co.kr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python (>=4.10.0.84,<5.0.0.0)",
    "certifi (>=2024.12.14,<2025.0.0)",
    "charset-normalizer (>=3.4.1,<4.0.0)",
    "cmake (>=3.31.4,<4.0.0)",
    "dlib (>=19.24.6,<20.0.0)",
    "idna (>=3.10,<4.0)",
    "imageio (>=2.36.1,<3.0.0)",
    "imageio-ffmpeg (>=0.5.1,<0.6.0)",
    "lazy-loader (>=0.4,<0.5)",
    "networkx (>=3.4.2,<4.0.0)",
    "numpy (>=2.2.1,<3.0.0)",
    "opencv-contrib-python (>=4.10.0.84,<5.0.0.0)",
    "packaging (>=24.2,<25.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "decorator (==4.4.2)",
    "moviepy (==1.0.3)",
    "proglog (>=0.1.10,<0.2.0)",
    "pywavelets (>=1.8.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "scikit-image (>=0.25.0,<0.26.0)",
    "sk-video (>=1.1.10,<2.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "tifffile (>=2025.1.10,<2026.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "torchaudio (>=2.5.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
