[project]
name = "kr-autoavsr"
version = "0.1.0"
description = ""
authors = [
    {name = "Moon-Dongkyu",email = "dongkyu_moon@daekyo.co.kr"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
