[project]
name = "kr-autoavsr"
version = "0.1.0"
description = ""
authors = [
    {name = "Moon-Dongkyu",email = "dongkyu_moon@daekyo.co.kr"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "certifi (==2024.8.30)",
    "charset-normalizer (==3.3.2)",
    "idna (==3.10)",
    "urllib3 (==2.2.3)",
    "numpy (==1.26.4)",
    "scipy (==1.14.1)",
    "pandas (==2.2.3)",
    "pytz (==2024.2)",
    "tzdata (==2024.2)",
    "torch (==2.4.1)",
    "torchvision (==0.19.1)",
    "torchaudio (==2.4.1)",
    "torchmetrics (==1.4.2)",
    "transformers (==4.45.1)",
    "tokenizers (==0.20.0)",
    "huggingface-hub (==0.25.1)",
    "datasets (==3.0.1)",
    "sentencepiece (==0.2.0)",
    "tensorboard (==2.18.0)",
    "tensorboard-data-server (==0.7.2)",
    "tensorboardx (==2.6.2.2)",
    "scikit-learn (==1.5.2)",
    "joblib (==1.4.2)",
    "threadpoolctl (==3.5.0)",
    "audioread (==3.0.1)",
    "soundfile (==0.12.1)",
    "sounddevice (==0.5.0)",
    "librosa (==0.10.2.post1)",
    "soxr (==0.5.0.post1)",
    "opencv-contrib-python (==4.10.0.84)",
    "scikit-image (==0.24.0)",
    "pillow (==10.4.0)",
    "imageio (==2.36.0)",
    "imageio-ffmpeg (==0.5.1)",
    "matplotlib (==3.9.2)",
    "contourpy (==1.3.0)",
    "cycler (==0.12.1)",
    "kiwisolver (==1.4.7)",
    "fonttools (==4.54.1)",
    "moviepy (==1.0.3)",
    "sk-video (==1.1.10)",
    "proglog (==0.1.10)",
    "requests (==2.32.3)",
    "tqdm (==4.66.5)",
    "regex (==2024.9.11)",
    "pyyaml (==6.0.2)",
    "jinja2 (==3.1.4)",
    "markupsafe (==2.1.5)",
    "cython (==3.0.11)",
    "dill (==0.3.8)",
    "filelock (==3.16.1)",
    "rapidfuzz (==3.10.0)",
    "pytorch-lightning (==1.5.10)",
    "lightning-utilities (==0.11.7)",
    "pydeprecate (==0.3.1)",
    "werkzeug (==3.0.4)",
    "flask (==2.3.3)",
    "attrs (==24.2.0)",
    "click (==8.1.7)",
    "decorator (==4.4.2)",
    "multiprocess (==0.70.16)",
    "xgboost (==2.1.1)",
    "mediapipe (==0.10.15)",
    "jax (==0.4.33)",
    "jaxlib (==0.4.33)",
    "opt-einsum (==3.4.0)",
    "ml-dtypes (==0.4.0)",
    "cmake (==3.31.0.1)",
    "dlib (==19.24.6)",
    "opencv-python (==4.10.0.84)",
    "pywavelets (==1.4.1)",
    "tifffile (==2023.7.10)",
    "pydub (>=0.25.1,<0.26.0)",
    "hydra-core (>=1.0.7,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
